# fsd-pixelforge-rasterizer

./: .gitignore  CMakeLists.txt  Notes  README.md  main.cpp
.github/workflows/: ci.yml
Engine/: Core.h  Geometry.h  Graphics.h  Managers.h  Scene.h  Utilities.h
Engine/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Menu.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
Engine/Geometry/: NextUp
Engine/Geometry/Curves/: BSpline.cpp  BSpline.h  BezierCurve.cpp  BezierCurve.h  Curve.cpp  Curve.h  FunctionCurve.cpp  FunctionCurve.h  HermiteSpline.cpp  HermiteSpline.h  LagrangeCurve.cpp  LagrangeCurve.h  NURBS.cpp  NURBS.h
Engine/Graphics/: What Next  WhatNext
Engine/Managers/: AnimationManager.h  CurveManager.h  InstanceManager.h  LightManager.h  MaterialManager.h  MeshManager.h  SceneNodeManager.h  TextureManager.h
Engine/Scene/: Scene.cpp  Scene.h  WhatNext
Resources/Shaders/: Emissive.frag  Emissive.vert  Lighting.frag  Lighting.vert  White.frag
assets/shaders/: emissive.frag  emissive.vert  lighting.frag  lighting.vert  skybox.frag  skybox.vert  skysphere.frag  skysphere.vert  white.vert
cmake/: CompilerWarnings.cmake  Dependencies.cmake  PixelForgeConfig.cmake.in
examples/: CMakeLists.txt  demo_registry.cpp  demo_registry.hpp  main.cpp
examples/scenes/: basic_demo.cpp  basic_demo.hpp  skybox_demo.cpp  skybox_demo.hpp  solar_system_demo.cpp  solar_system_demo.hpp
include/pixelforge/: builders.hpp  core.hpp  geometry.hpp  graphics.hpp  managers.hpp  scene.hpp  utilities.hpp
src/: CMakeLists.txt
src/builders/compiler/: animation_compiler.cpp  animation_compiler.hpp  light_compiler.cpp  light_compiler.hpp  light_unit_compiler.cpp  light_unit_compiler.hpp  model_compiler.cpp  model_compiler.hpp  render_unit_compiler.cpp  render_unit_compiler.hpp  scene_compiler.cpp  scene_compiler.hpp  transform_node_compiler_utils.hpp
src/builders/legacy/animation/: animation_builder.hpp  curve_animation_builder.hpp  keyframe_animation_builder.hpp  orbiting_builder.hpp  rotation_builder.hpp  scaling_builder.hpp  translation_builder.hpp
src/builders/legacy/detail/: scene_node_registry.cpp
src/builders/legacy/lighting/: ambient_light_builder.hpp  directional_light_builder.hpp  light_builder.hpp  positional_light_builder.hpp  spot_light_builder.hpp
src/builders/legacy/nodes/: group_builder.hpp  light_unit_builder.hpp  model_builder.hpp  render_unit_builder.hpp  scene_builder.hpp  scene_node_builder.hpp  transform_node_builder.hpp
src/core/: application.cpp  camera.cpp  context.cpp  input.cpp  input.hpp  renderer.cpp  renderer.hpp  window.cpp
src/geometry/: utilities.cpp
src/geometry/curves/: bezier_curve.cpp  bspline.cpp  curve.cpp  function_curve.cpp  hermite_spline.cpp  lagrange_curve.cpp  nurbs.cpp
src/geometry/meshes/: annulus.cpp  arrow.cpp  cone.cpp  cube.cpp  cuboid.cpp  cylinder.cpp  frustum.cpp  mesh.cpp  points.cpp  polygon.cpp  rounded_cube.cpp  shell.cpp  sphere.cpp  sphere_sector.cpp  sphere_segment.cpp  sphere_wedge.cpp  torus.cpp  tube.cpp
src/graphics/: debug.cpp  debug.hpp
src/graphics/pipeline/: index_buffer.cpp  index_buffer.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp  vertex_data.cpp
src/graphics/texturing/: cube_map.cpp  material.cpp  texture.cpp
src/managers/: animation_manager.hpp  curve_manager.hpp  instance_manager.hpp  light_manager.hpp  material_manager.hpp  mesh_manager.hpp  scene_node_manager.hpp  texture_manager.hpp
src/scene/: utilities.cpp
src/scene/animation/: animation.cpp  curve_animation.cpp  elliptic_orbiting.cpp  keyframe_animation.cpp  orbiting.cpp  rotation.cpp  scaling.cpp  translation.cpp
src/scene/builders/detail/: scene_node_registry.cpp
src/scene/debug/: scene_node_printer.cpp
src/scene/lighting/: ambient_light.cpp  directional_light.cpp  light.cpp  positional_light.cpp  spot_light.cpp
src/scene/nodes/: animation_node.cpp  group.cpp  light_unit.cpp  model.cpp  render_unit.cpp  scene.cpp  scene_node.cpp  transform_node.cpp
src/scene/transform/: rotate.cpp  scale.cpp  transform.cpp  translate.cpp
tests/: CMakeLists.txt  test_main_gl_context.cpp
tests/builders/: animation_builder_compiler_tests.cpp  light_builder_compiler_tests.cpp  light_unit_builder_compiler_tests.cpp  model_builder_compiler_tests.cpp  render_unit_builder_compiler_tests.cpp  scene_builder_compiler_tests.cpp
tests/core/: camera_tests.cpp  window_tests.cpp
tests/geometry/: utilities_tests.cpp
tests/geometry/curves/: bezier_curve_tests.cpp  bspline_tests.cpp  hermite_spline_tests.cpp  lagrange_curve_tests.cpp  nurbs_tests.cpp
tests/geometry/meshes/: cuboid_tests.cpp  sphere_tests.cpp  torus_tests.cpp
tests/graphics/pipeline/: index_buffer_tests.cpp  shader_tests.cpp  vertex_array_tests.cpp  vertex_buffer_layout_tests.cpp  vertex_buffer_tests.cpp  vertex_data_tests.cpp
tests/graphics/texturing/: cube_map_tests.cpp  material_tests.cpp  texture_tests.cpp
tests/integration/: animation_transform_pipeline_tests.cpp  builder_scene_pipeline_tests.cpp  material_texture_pipeline_tests.cpp  scene_cube_map_tests.cpp
tests/managers/: animation_manager_tests.cpp  curve_manager_tests.cpp  light_manager_tests.cpp  material_manager_tests.cpp  mesh_manager_tests.cpp  scene_node_manager_tests.cpp  texture_manager_tests.cpp
tests/scene/: utilities_tests.cpp
tests/scene/animation/: animation_tests.cpp  curve_animation_tests.cpp  elliptic_orbiting_tests.cpp  keyframe_animation_tests.cpp  orbiting_tests.cpp  rotation_tests.cpp  scaling_tests.cpp  translation_tests.cpp
tests/scene/lighting/: ambient_light_tests.cpp  directional_light_tests.cpp  light_tests.cpp  positional_light_tests.cpp  spot_light_tests.cpp
tests/scene/nodes/: animation_node_tests.cpp  light_unit_tests.cpp  model_tests.cpp  render_unit_tests.cpp  scene_node_tests.cpp  scene_tests.cpp  transform_node_tests.cpp
tests/scene/transform/: rotate_tests.cpp  scale_tests.cpp  transform_tests.cpp  translate_tests.cpp
(+268 files in other folders)
